# LR7

LR7/Project/: CMakeLists.txt  main.cpp  task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h
